// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS - <Editor> render Editor 1`] = `
<span
  style={
    Object {
      "display": "inherit",
    }
  }
>
  <MonacoEditor
    className=""
    defaultValue=""
    editorDidMount={[Function]}
    editorWillMount={[Function]}
    height="calc(100vh - 235px)"
    language="text"
    name="123123123123"
    onChange={[MockFunction]}
    options={
      Object {
        "automaticLayout": true,
        "codeLens": false,
        "cursorBlinking": "blink",
        "fontFamily": "monospace",
        "fontLigatures": false,
        "fontSize": 12,
        "formatOnPaste": false,
        "formatOnType": false,
        "lineHeight": 21,
        "lineNumbers": true,
        "minimap": Object {
          "enabled": false,
        },
        "readOnly": false,
        "roundedSelection": false,
        "scrollBeyondLastLine": false,
        "selectOnLineNumbers": false,
        "wordWrap": "bounded",
        "wordWrapColumn": 80,
      }
    }
    theme="vs"
    value="hi"
    width="100%"
  />
</span>
`;

exports[`COMPONENTS - <Editor> render markdown Editor 1`] = `
<span
  style={
    Object {
      "display": "inherit",
    }
  }
>
  <MonacoEditor
    className=""
    defaultValue=""
    editorDidMount={[Function]}
    editorWillMount={[Function]}
    height="calc(100vh - 235px)"
    language="text"
    name="123123123123"
    onChange={[MockFunction]}
    options={
      Object {
        "automaticLayout": true,
        "codeLens": false,
        "cursorBlinking": "blink",
        "fontFamily": "monospace",
        "fontLigatures": false,
        "fontSize": "12",
        "formatOnPaste": false,
        "formatOnType": false,
        "lineHeight": "21",
        "lineNumbers": true,
        "minimap": Object {
          "enabled": false,
        },
        "readOnly": false,
        "roundedSelection": false,
        "scrollBeyondLastLine": false,
        "selectOnLineNumbers": false,
        "wordWrap": "bounded",
        "wordWrapColumn": "80",
      }
    }
    theme="vs"
    value="# hi"
    width="100%"
  />
</span>
`;
